# openmetrics-vici-exporter

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.forgejo/workflows/: build-nix.yml  build-rust.yml
src/: main.rs  vici.rs
src/openmetrics/: mod.rs  openmetrics_data_model.rs
