[package]
name = "openmetrics-vici-exporter"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.15", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
futures-util = "0.3"
tokio = { version = "1.43", features = ["rt-multi-thread","macros"] }
rsvici = "0.1"
anyhow = "1.0"
